--- a/gb/20/1/18/n11802259.md
+++ b/gb/20/1/18/n11802259.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/iaoxos223/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iaoxos223/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iaoxos223/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aovsvx368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aovsvx368/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aovsvx368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aovsvx368/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aovsvx368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>堪京学校募捐学习用品帮助灾区儿童返校</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月18日讯】（大纪元记者黄思文澳洲编译报导）为帮助新州南海岸灾区学生重返校园，<a href="https://github.com/iaoxos223/djy/blob/master/gb/tag/%E9%A6%96%E9%83%BD%E8%A1%8C%E6%94%BF%E5%8C%BA.md">首都行政区</a>（ACT）一小学上周募集了近300只装满学习用品的书包。其它学校纷纷效仿，所有捐赠的书包将在月底送至<a href="https://github.com/iaoxos223/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">山火</a>灾区。</p>
-<p>据堪培拉时报报导，瓦尼亚萨区（Wanniassa）的圣安东尼小学（St Anthony&#8217;s Primary School）助教瑞安（Angela Ryan）倡议学校行动起来，帮助<a href="https://github.com/iaoxos223/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md">山火</a>灾区儿童，因此大家决定<a href="https://github.com/iaoxos223/djy/blob/master/gb/tag/%E5%8B%9F%E6%8D%90.md">募捐</a>学习用品，帮助孩子们重返学校。</p>
-<p><a href="https://github.com/iaoxos223/djy/blob/master/gb/tag/%E5%8B%9F%E6%8D%90.md">募捐</a>消息在社交媒体上发布后，很快得以分享传播，也得到老师、家长和孩子们的积极响应。堪培拉人的慷慨大度令人感动。圣安东尼小学很快募集到了273个书包，八大袋运动用球和12箱教师用资料。每个书包内有饮水瓶、便当盒，以及铅笔盒、记号笔和胶棒等学习用品。</p>
+<p>【大纪元2020年01月18日讯】（大纪元记者黄思文澳洲编译报导）为帮助新州南海岸灾区学生重返校园，<ahref="https://github.com/aovsvx368/djy/blob/master/gb/tag/%E9%A6%96%E9%83%BD%E8%A1%8C%E6%94%BF%E5%8C%BA.md#1">首都行政区</a>（ACT）一小学上周募集了近300只装满学习用品的书包。其它学校纷纷效仿，所有捐赠的书包将在月底送至<ahref="https://github.com/aovsvx368/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">山火</a>灾区。</p>
+<p>据堪培拉时报报导，瓦尼亚萨区（Wanniassa）的圣安东尼小学（St Anthony&#8217;s Primary School）助教瑞安（Angela Ryan）倡议学校行动起来，帮助<ahref="https://github.com/aovsvx368/djy/blob/master/gb/tag/%E5%B1%B1%E7%81%AB.md#1">山火</a>灾区儿童，因此大家决定<ahref="https://github.com/aovsvx368/djy/blob/master/gb/tag/%E5%8B%9F%E6%8D%90.md#1">募捐</a>学习用品，帮助孩子们重返学校。</p>
+<p><ahref="https://github.com/aovsvx368/djy/blob/master/gb/tag/%E5%8B%9F%E6%8D%90.md#1">募捐</a>消息在社交媒体上发布后，很快得以分享传播，也得到老师、家长和孩子们的积极响应。堪培拉人的慷慨大度令人感动。圣安东尼小学很快募集到了273个书包，八大袋运动用球和12箱教师用资料。每个书包内有饮水瓶、便当盒，以及铅笔盒、记号笔和胶棒等学习用品。</p>
 <p>教师亚当森（Tracey Adamson）说：老师们自愿放弃了一定的假期休息时间来做协调工作，这让人“难以置信”，也非常有意义。</p>
 <p>“起初我们只是想做件微小而实用的事，同时也希望孩子们能参与捐赠。”</p>
 <p>其它行动起来的学校包括高里区（Gowrie）的圣家小学（Holy Family Primary School），坎巴区（Kambah）的使徒圣托马斯小学（St Thomas the Apostle Primary School）和瓦拉曼加区（Waramanga）的圣约翰范尼小学（St John Vianney’s Primary School）。</p>
@@ -16,35 +16,50 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/18/n11802259.htm">堪京学校募捐学习用品帮助灾区儿童返校</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11797171.htm">山火无情 人间有情</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11789464.htm">120万人响应 澳女笑星山火募捐已超5千万</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800222.htm">澳洲东部火灾 西澳富翁捐款7千万</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781776.htm">【独家】人民日报前副总编遭情夫之子举报</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799356.htm">【翻墙必看】美中贸易协议签署意味着什么</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800041.htm">伊朗人不踩美国和以色列国旗 网民对比中国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11631494.htm">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788003.htm">逆天而为痛悔迟72：1966──金顺守女逆守牛，江青文革妖言骤（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11799058.htm">美国紧逼中共 贸易协议北京大让步内幕</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796563.htm">央视前主持人赵忠祥患癌在北京去世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801450.htm">【新闻看点】6因素 北京接受川普惩罚性关税</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800232.htm">【十字路口】中美贸协难落实 川普另有大战略（1）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798787.htm">【新闻看点】川普数落中共贸易不公 刘鹤尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796365.htm">大陆演艺圈大洗牌？杨紫2019年最走红</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11799718.htm">大陆男子用牙膏画人像 关灯后令人惊叹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795438.htm">子瑜放假游荷兰及比利时 羽绒衣裹身也纤细</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800385.htm">美国白狗生了8只小狗 有一只竟是绿色的</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/1/13/n11789464.md#1">120万人响应 澳女笑星山火募捐已超5千万</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/1/16/n11797171.md#1">山火无情 人间有情</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/1/17/n11800222.md#1">澳洲东部火灾 西澳富翁捐款7千万</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523219.md#1">首都行政区拟推 “维修权”保护消费者权益</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524743.md#1">十月大选投票率高 废票率历史最低</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523220.md#1">工党绿党签署协议 新内阁成员增至9名</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522397.md#1">亚裔女议员Lee新任首都行政区自由党领袖</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522240.md#1">堪培拉马拉松将首次采用“网络比赛”</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522227.md#1">堪京独立屋第三季度房价增幅创三年来最高</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/28/n12508011.md#1">堪培拉供水质管严格 饮用水质全澳最佳</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802259.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520689.md#1">【远见快评】最后冲刺 川普人气爆棚 奥拜尴尬</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/15/n12477281.md#1">【欺世大观】黄继光堵枪眼官媒3版本 军方悄否定</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518949.md#1">悄悄通过验收 三峡工程验收委主任是谁？</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520197.md#1">鲍彤：中共19届五中全会的两点结论</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12519251.md#1">签名遇妇人暖送1卷大钞 澎恰恰泪崩：我会加油</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520365.md#1">昆凌分享儿女吃饭趣事 小周周获赞心智超成熟</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12519131.md#1">印男兜售“阿拉丁神灯” 还伪装精灵冒出来</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518854.md#1">美国孕妇出现阵痛 坚持投完票才去医院分娩</a></li>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521656.md#1">为什么麦当劳的Logo使用黄色和红色？</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aovsvx368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aovsvx368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/18/n11802259.htm">堪京学校募捐学习用品帮助灾区儿童返校</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aovsvx368/djy/blob/master/gb/20/1/18/n11802259.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aovsvx368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aovsvx368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aovsvx368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aovsvx368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aovsvx368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
