--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -2,7 +2,7 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525819.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg"><p align="center">加州选民彻夜盯票 发现诡异现象疑作弊</p></a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525819.md#1" title="加州选民彻夜盯票 发现诡异现象疑作弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525798.md#1" title="【直播】川普竞选团队费城召开新闻会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/d5d8198336ab2cc74dd6dff7d561ecc4-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】 川普团队提诉 暂停密西根计票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】 川普宣布在宾州等三州获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525260.md#1" title="选情胶着 美关键摇摆州结果延迟 暂无赢家""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229454030-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525212.md#1" title="大陆网文指美国大选是“正邪较量”引共鸣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-04-at-11.07.13-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12523578.md#1" title="【国会大选更新】参院共和党再增1席""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-11.36.58-PM-1-320x200.png">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521031.md#1" title="【内幕】高校内部文件泄中共无自信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-166894743-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523312.md#1" title="【图解】选前震撼弹 拜登电脑门事件簿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://aovsvx368.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525836.md#1">佛州公投 未来6年将最低时薪调至15美元</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525789.md#1">密歇根州一个县“计票结果明显不正确”</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12523931.md#1">美国首个唐氏症女模特 代言高端护肤品</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525836.md#1">佛州公投 未来6年将最低时薪调至15美元</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525768.md#1">加州公投通过22号提案 Uber和Lyft盘前大涨</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525860.md#1">詹乐霞：缺席选票不合格 选后5天可改</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525655.md#1">2020年海外青年华语文研习班第4梯次即将截止</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525768.md#1">加州公投通过22号提案 Uber和Lyft盘前大涨</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,11 +42,11 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,863,083 人
+!共 366,863,822 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
-<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 川普团队提诉 暂停密西根计票</a><br>
+<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 川普宣布在宾州等三州获胜</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525260.md#1">选情胶着 美关键摇摆州结果延迟 暂无赢家</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525212.md#1">大陆网文指美国大选是“正邪较量”引共鸣</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
