--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
